src/pages/image-slice/image-slice.scss
.image-slice-page {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;

    .component-area {
        margin: 10px;
        display: flex;
        flex-direction: column;

        >.image-container {
            overflow: hidden;
            >.image {
                margin: -5px;
            }
        }
    }

    .styles-area {
        margin: 10px;
        width: 100%;
        height: 100%;
    }
}

